--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 resolver = "2"
-name = "ama-villager"
+name = "rust-bevy"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,13 +14,13 @@ bevy = "0.5.0"
 rand = "0.8.4"
 serde = "1.0.131"
 serde_json = "1.0.72"
-wasm-bindgem = "0.2"
+wasm-bindgen = "0.2"
 
 # Dependencies for native only.
-# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-# bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}
 
 # Dependencies for WASM only.
-# [target.'cfg(target_arch = "wasm32")'.dependencies]
-# bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
-# bevy_webgl2 = "0.5"
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
+bevy_webgl2 = "0.5"
