--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-create-type = ["cdylib","rlib"]
+crate-type = ["cdylib","rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.5.0"
+bevy = { version = "0.5.0", default-features = false }
+getrandom = "0.2.3"
 rand = "0.8.4"
 serde = "1.0.131"
 serde_json = "1.0.72"
