--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ rand = "0.8.4"
 serde = "1.0.131"
 serde_json = "1.0.72"
 wasm-bindgen = "0.2"
+console_error_panic_hook = "0.1"
+
+[profile.release]
+lto = "thin"
+opt-level = 's'
 
 # Dependencies for native only.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
