--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,13 @@ name = "AMAVillager"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-crate-type = ["cdylib","rlib"]
+# [libIxh]
+#crate-type = ["cdylib","rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bevy = { version = "0.5.0", default-features = false }
-getrandom = "0.2.3"
 rand = "0.8.4"
 serde = "1.0.131"
 serde_json = "1.0.72"
@@ -30,3 +29,4 @@ bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bev
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
 bevy_webgl2 = "0.5"
+getrandom = "0.2.3"
