--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ rand = "0.8.4"
 serde = "1.0.131"
 serde_json = "1.0.72"
 
-# [profile.release]
-# lto = "thin"
-# opt-level = 's'
+[profile.release]
+lto = "thin"
+opt-level = 's'
 
 # Dependencies for native only.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -30,3 +30,4 @@ console_error_panic_hook = "0.1"
 wasm-bindgen = "0.2"
 bevy_webgl2 = "0.5"
 getrandom = "0.2.3"
+web-sys = "0.3"
